--- a/src/App.css
+++ b/src/App.css
@@ -2,6 +2,11 @@
   max-width: 1280px;
   margin: 0 auto;
   text-align: center;
+  overflow: hidden;
+  display: flex;
+  flex-direction: column;
+  gap: 0;
+  height: 100vh;
 }
 
 .logo {
